--- a/mkdocs.yaml
+++ b/mkdocs.yaml
@@ -7,6 +7,10 @@ repo_name: ABBTS-DAT-SKI/wissensdatenbank
 
 nav:
   - Startseite: index.md
+  - Datenverarbeitung: 
+    - Entfernen von Duplikaten: data-engineering/drop_duplicates.md
+    - Befüllen von fehlenden Werten: data-engineering/fillna.md
+    -  Entfernen von Ausreissern: data-engineering/outliers.md
 plugins:
   - search
 theme:
