--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,4 +11,8 @@ authors = [
 ]
 readme = "README.md"
 requires-python = ">=3.12"
-dependencies = ["mkdocs>=1.6.1", "mkdocs-material>=9.5.49"]
+dependencies = [
+    "markdown-callouts>=0.4.0",
+    "mkdocs>=1.6.1",
+    "mkdocs-material>=9.5.49",
+]
