--- a/mkdocs.yaml
+++ b/mkdocs.yaml
@@ -8,6 +8,7 @@ repo_name: ABBTS-DAT-SKI/wissensdatenbank
 nav:
   - Startseite: index.md
   - Mini Challenge: mini_challenge.md
+  - Python Installation: python_installation.md
   - Wissensdatenbank:
     - Datenverarbeitung: 
       - Entfernen von Duplikaten: data-engineering/drop_duplicates.md
