--- a/mkdocs.yaml
+++ b/mkdocs.yaml
@@ -14,6 +14,7 @@ nav:
           - Einführung Pandas: data-engineering/introduction.md
           - Übersicht Datentypen: data-engineering/data_types.md
           - Datenformate: data-engineering/data_formats.md
+          - Spaltenmanipulationen: data-engineering/column_manipulations.md
           - Entfernen von Duplikaten: data-engineering/drop_duplicates.md
           - Befüllen von fehlenden Werten: data-engineering/fillna.md
           - Entfernen von Ausreissern: data-engineering/outliers.md
