Added: imputation, joins

--- a/mkdocs.yaml
+++ b/mkdocs.yaml
@@ -19,6 +19,8 @@ nav:
           - Befüllen von fehlenden Werten: data-engineering/fillna.md
           - Entfernen von Ausreissern: data-engineering/outliers.md
           - Time-Indexes: data-engineering/time_indexes.md
+          - Imputationen: data-engineering/imputation.md
+          - Horizontale Joins: data-engineering/joins.md
 
 plugins:
   - search
