Moved: viz one level up

--- a/mkdocs.yaml
+++ b/mkdocs.yaml
@@ -22,8 +22,7 @@ nav:
           - Imputationen: data-engineering/imputation.md
           - Horizontale Joins: data-engineering/joins.md
           - Pivo/Melt: data-engineering/pivot_melt.md
-      - Visualisierungen:
-          - Visualisierungen: visualization/visualization.md
+      - Visualisierungen: visualization.md
 plugins:
   - search
 
